@@ -36,6 +36,7 @@ import java.util.StringTokenizer;
 import java.util.Vector;
 
 import javax.swing.*;
+import javax.xml.stream.events.EndElement;
 
 import cds.tools.Util;
 import cds.xml.Field;
@@ -360,7 +361,7 @@ public class ServerFile extends Server implements XMLConsumer {
 
             if( (type & MyInputStream.AJS|type & MyInputStream.AJSx|MyInputStream.UNKNOWN)!=0) aladin.command.readFromStream(in);
             else if( (type & MyInputStream.AJ)!=0) n=loadAJ(in)?1:0;
-            else if( (type & MyInputStream.AJTOOL)!=0 ) n=loadTool(in)?1:0;
+            else if( (type & MyInputStream.AJTOOL)!=0 ) n=loadTool(in,label)?1:0;
             else if( (type & MyInputStream.IDHA)!=0) n=updateMetaData(in,server,"",null)?1:0;
             else if( (type & MyInputStream.SIA_SSA)!=0)  n=updateMetaData(in,server,"",null)?1:0;
             
@@ -611,14 +612,17 @@ public class ServerFile extends Server implements XMLConsumer {
     * @param in l'inputStream
     * @return true si ok, false sinon
     */
-   protected boolean loadTool(MyInputStream in) {
+   protected boolean loadTool(MyInputStream in,String label) {
       plan = ( new PlanTool(aladin));
       inValue=true;
       typePlan = AJTOOL;
-      return loadAJ(in);
+      boolean rep = loadAJ(in);
+      if( rep ) {
+         plan.setLabel(label);
+         endElement("PLANE");
+      }
+      return rep;
    }
-
-
 
    /* Variables temporaires associees au parsing du XML */
    private boolean inValue,inFilterScript,inFitsHeader,inFilter;  // Etat
@@ -1105,29 +1109,16 @@ public class ServerFile extends Server implements XMLConsumer {
       // On skippe un eventuel \r
       while( cur<end && (ch[cur]=='\r' || ch[cur]=='\n') ) cur++;
 
-      if( ajtool ) {
-         cur=getSourceField(ch,cur,end);    try{ ra=Double.valueOf(rec).doubleValue(); } catch( Exception e) { ra=0; }
-         cur=getSourceField(ch,cur,end);    try{ de=Double.valueOf(rec).doubleValue(); } catch( Exception e) { de=0; }
-         
-         cur=getSourceField(ch,cur,end);    typeTool=rec;
-         cur=getSourceField(ch,cur,end);    flagSuite=rec.equals("+"); flagSpecial=rec.equals("*");
-         x=0;
-         y=0;
-         cur=getSourceField(ch,cur,end);    id=rec; 
-         withlabel=id!=null && id.length()>0;
-  
-      } else {
-         // Recuperation du type, de l'info sur le suivant, de la position
-         // en ra,de et en x,y ainsi que l'identificateur
-         cur=getSourceField(ch,cur,end);	typeTool=rec;
-         cur=getSourceField(ch,cur,end);	flagSuite=rec.equals("+"); flagSpecial=rec.equals("*");
-         cur=getSourceField(ch,cur,end);	try{ ra=Double.valueOf(rec).doubleValue(); } catch( Exception e) { ra=0; }
-         cur=getSourceField(ch,cur,end);	try{ de=Double.valueOf(rec).doubleValue(); } catch( Exception e) { de=0; }
-         cur=getSourceField(ch,cur,end);	try{ x=Integer.parseInt(rec); } catch( Exception e) { x=0; }
-         cur=getSourceField(ch,cur,end);	try{ y=Integer.parseInt(rec); } catch( Exception e) { y=0; }
-         cur=getSourceField(ch,cur,end);	withlabel=(new Boolean(rec)).booleanValue();
-         cur=getSourceField(ch,cur,end);	id=rec;
-      }
+      // Recuperation du type, de l'info sur le suivant, de la position
+      // en ra,de et en x,y ainsi que l'identificateur
+      cur=getSourceField(ch,cur,end);	typeTool=rec;
+      cur=getSourceField(ch,cur,end);	flagSuite=rec.equals("+"); flagSpecial=rec.equals("*");
+      cur=getSourceField(ch,cur,end);	try{ ra=Double.valueOf(rec).doubleValue(); } catch( Exception e) { ra=0; }
+      cur=getSourceField(ch,cur,end);	try{ de=Double.valueOf(rec).doubleValue(); } catch( Exception e) { de=0; }
+      cur=getSourceField(ch,cur,end);	try{ x=Integer.parseInt(rec); } catch( Exception e) { x=0; }
+      cur=getSourceField(ch,cur,end);	try{ y=Integer.parseInt(rec); } catch( Exception e) { y=0; }
+      cur=getSourceField(ch,cur,end);	withlabel=(new Boolean(rec)).booleanValue();
+      cur=getSourceField(ch,cur,end);	id=rec;
 
       // Ajout de l'objet dans le plan courant
       Position o=null;
